Added filesystem and diskio to cmake build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@ include (FindPkgConfig)
 set (apricosfsman
     main.c
     commandproc.c
+    filesystem.c
+    diskio.c
     )
 
 add_executable (${PROJECT_NAME} ${apricosfsman})
