Initial commit of argument parser

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set (apricosfsman
     allocator.c
     fsdirectory.c
     fsfile.c
+    argparser.c
     )
 
 add_executable (${PROJECT_NAME} ${apricosfsman})
