--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,8 @@ a.out
 # Build directory (at least on my system)
 build/
 
+# Other directories that shouldn't be pushed
+data/
+
 # Ignore compile commands (used with YCM)
 compile_commands.json
